# traccia

./: .gitignore  ANNOUNCEMENT.md  ARCHITECTURE.md  DTracciatestsintegrationtest_claude_code_mock.py  EVIDENCE_BUNDLE_FORMAT_v1.md  README.md  STABLE_INTERFACES.md  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feedback.md
analyzer/: __init__.py  classifier.py  engine.py
cli/: traccia.py
docs/emitters/: openai_agents_sdk.md
eval/: setup.py
eval/traccia_eval/: __init__.py  cli.py  scorer.py
eval/traccia_eval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/: demo_agent.py  simple_agent.py
experimental/: README.md
experimental/entropy/: injectors.py
experimental/loop/: loop.py
guard/: README.md  setup.py
guard/policies/: default.yaml  permissive.yaml  strict.yaml
labs/: README.md  sdk.py
labs/loop/: __init__.py
labs/residual/: engine.py
paper/: Traccia-Paper-v1.0.md
registry/: CORPUS_SPEC.md  entries.jsonl  register.py  server.py  upload.py
spec/: OPENBASE_SESSION_PACKAGE_SPEC_v1.0.md
src/traccia/: __init__.py
tools/: auto_blackbox.bat  blackbox_to_traccia.py  build_dataset.py  certify.py  events_fixed.jsonl  generate_leaderboard.py  research_log.py
traccia-rust/: Cargo.toml
traccia-rust/crates/traccia-event/: Cargo.toml
traccia-rust/crates/traccia-event/src/: builder.rs  lib.rs  model.rs
traccia-rust/crates/traccia-verify/: Cargo.toml
traccia-rust/crates/traccia-verify/src/: lib.rs  result.rs  verifier.rs
traccia/aes/: models.py  (+3 more)
traccia_sdk.egg-info/: PKG-INFO  SOURCES.txt
(+105 files in other folders)
