[package]
name = "traccia-event"
version = "0.1.0"
edition = "2021"

[dependencies]
traccia-core = { path = "../traccia-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aegis-adapters = { version = "0.1.0", path = "../../../../Aegis/adapters" }

[dev-dependencies]
serde_json = "1"
