[package]
name = "traccia-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
traccia-core = { path = "../traccia-core" }
traccia-event = { path = "../traccia-event" }
traccia-evidence = { path = "../traccia-evidence" }
traccia-package = { path = "../traccia-package" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
